--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     padding: 2% 2%;
 }
 
+/* HEADER */
+
 .PP {
     text-align: start;
     margin-bottom: 50px;
@@ -16,6 +18,8 @@
     margin-bottom: 70px;
     font-size: x-large;
 }
+
+/* ONGLETS */
 
 .onglet {
     text-align: center;
@@ -34,10 +38,9 @@
     justify-content: center;
 }
 
-.rond a {
+.onglet a {
     text-decoration: none;
     color: #FFFFFF;
-    
 }
 
 #print {    
@@ -75,6 +78,8 @@
     border: solid;
     border-color: #FFB0B0;
 }
+
+/* FOOTER */
 
 .foot {
     font-size: small;
