--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -5,6 +5,10 @@
     padding: 2% 2%;
 }
 
+body {
+    background-color: #5C5C5C;
+}
+
 /* HEADER */
 
 .header {    
@@ -92,6 +96,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#b-print {
+    background-color: #ABF59F;
+}
+
+
+#b-web {
+    background-color: #B4F3FB;
+}
+
+#b-contact {
+    background-color: #FFB0B0;
 }
 
 .carousel {
