--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -111,7 +111,7 @@ body {
     background-color: #FFB0B0;
 }
 
-.carousel {
+.back-card {
     background-color: lightgrey;
     padding: 2%;
     display: flex;
