--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -126,7 +126,6 @@ body {
     text-align: center;
 }
 
-
 #card a {
     text-decoration: none;
     color: #FFFFFF;
@@ -138,7 +137,13 @@ body {
 }
 
 #card img {
+    width: 100%;
     max-height: 350px;
+    margin-bottom: 10px;
+}
+
+#card video {
+    width: 100%;    
     margin-bottom: 10px;
 }
 
