--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -89,7 +89,6 @@ body {
 /* BODY */
 
 .bandeau {
-    background-color: #B4F3FB;
     height: 70px;
     margin-bottom: 2%;
     font-size: x-large;
@@ -118,7 +117,7 @@ body {
     justify-content: space-around;
 }
 
-#card {
+.card {
     background-color: gray;
     width: 500px;
     height: 500px;
@@ -126,23 +125,23 @@ body {
     text-align: center;
 }
 
-#card a {
+.card a {
     text-decoration: none;
     color: #FFFFFF;
 }
 
-#card a:hover {
+.card a:hover {
     text-decoration: underline;
     color: lightgrey;
 }
 
-#card img {
+.card img {
     width: 100%;
     max-height: 350px;
     margin-bottom: 10px;
 }
 
-#card video {
+.card video {
     width: 100%;    
     margin-bottom: 10px;
 }
