--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -90,6 +90,7 @@ body {
 
 .bandeau {
     height: 70px;
+    border-radius: 20px;
     margin-bottom: 2%;
     font-size: x-large;
     display: flex;
@@ -112,6 +113,7 @@ body {
 
 .back-card {
     background-color: lightgrey;
+    border-radius: 20px;
     padding: 2%;
     display: flex;
     justify-content: space-around;
@@ -121,6 +123,7 @@ body {
     background-color: gray;
     width: 500px;
     height: 500px;
+    border-radius: 20px;
     padding: 2% 2%;
     text-align: center;
 }
@@ -167,7 +170,6 @@ body {
 /* CSS LIGHTBOX */
 
 .card img {
-    /* border-radius: 5px; */
     cursor: pointer;
     transition: 0.3s;
 }
@@ -182,7 +184,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #5c5c5ccc;
+    background-color: #5c5c5cd2;
 }
 
 .modal-content {
@@ -198,7 +200,7 @@ body {
     width: 80%;
     max-width: 700px;
     text-align: center;
-    color: #FFFFFF;
+    color: lightgray;
     padding: 10px 0;
     height: 150px;
 }
@@ -222,7 +224,7 @@ body {
     position: absolute;
     top: 15px;
     right: 35px;
-    color: #f1f1f1;
+    color: #FFFFFF;
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
@@ -268,41 +270,41 @@ img {
     top: 50%;
     width: auto;
     padding: 16px;
-    margin-top: -22px;
+    margin-top: -25px;
     color: lightgray;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 30px;
     transition: 0.6s ease;
     user-select: none;
 }
 
 .prev {
-    left: 0;
-    border-radius: 3px 0 0 3px;
+    left: 0;    
 }
 
 .prev:hover {
-    background-color: #5C5C5Ccc;
+    background-color: #5c5c5cd2;
+    border-radius: 0 10px 10px 0;
 }
 
 .next {
-    right: 0;
-    border-radius: 0 3px 3px 0;
+    right: 0;    
 }
 
 .next:hover {
-    background-color: #5C5C5Ccc;
+    background-color: #5c5c5cd2;
+    border-radius: 10px 0 0 10px;
 }
 
-/* .text {
-    color: #ffffff;
+.text {
+    color: lightgray;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
     width: 100%;
     text-align: center;
-  } */
+  }
 
 .dots {
     margin-top: -35px;
@@ -314,7 +316,7 @@ img {
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: lightgray;
+    background-color: #5C5C5C;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
@@ -322,7 +324,7 @@ img {
 
 .active,
 .dot:hover {
-    background-color: #5C5C5C;
+    background-color: lightgray;
 }
 
 .fade {
