--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -192,20 +192,6 @@ body {
     display: block;
     width: 80%;
     max-width: 700px;
-}
-
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: lightgray;
-    padding: 150px 0;
-    height: 150px;
-}
-
-.modal-content, #caption {
     animation-name: zoom;
     animation-duration: 0.6s;
 }
@@ -217,6 +203,29 @@ body {
 
     to {
         transform: scale(1.5)
+    }
+}
+
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: lightgray;
+    padding: 150px 0;
+    height: 150px;
+    animation-name: cache;
+    animation-duration: 1.2s;
+}
+
+@keyframes cache {
+    from {
+        opacity:0%;
+    }
+
+    to {
+        opacity:100%;
     }
 }
 
