--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -1,3 +1,5 @@
+*, *:after, *:before {box-sizing:border-box}
+
 .container {
     background-color: #5C5C5C;
     font-family: sans-serif;
@@ -40,8 +42,8 @@ body {
 
 .rond {
     font-size: medium;
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     margin : 5px;
     border-radius: 150px;    
     border: solid;
@@ -121,8 +123,8 @@ body {
 
 .card {
     background-color: gray;
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
     border-radius: 20px;
     padding: 2% 2%;
     text-align: center;
@@ -209,7 +211,7 @@ body {
 #caption {
     margin: auto;
     display: block;
-    width: 80%;
+    width: 100%;
     max-width: 700px;
     text-align: center;
     color: lightgray;
@@ -227,6 +229,10 @@ body {
     to {
         opacity:100%;
     }
+}
+
+.zoom {
+    min-width: 200%;
 }
 
 .close {
