--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -128,6 +128,8 @@ body {
     border-radius: 20px;
     padding: 2% 2%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .card a {
@@ -144,6 +146,7 @@ body {
     width: 100%;
     max-height: 350px;
     margin-bottom: 10px;
+    object-fit: cover;
 }
 
 .card video {
@@ -180,7 +183,7 @@ body {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 200px;
+    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
@@ -193,7 +196,7 @@ body {
     margin: auto;
     display: block;
     width: 80%;
-    max-width: 700px;
+    max-width: 600px;
     animation-name: zoom;
     animation-duration: 0.6s;
 }
@@ -215,7 +218,7 @@ body {
     max-width: 700px;
     text-align: center;
     color: lightgray;
-    padding: 70px 0;
+    padding: 40px 0;
     height: 150px;
     animation-name: cache;
     animation-duration: 1.2s;
@@ -322,7 +325,9 @@ img {
   }
 
 .dots {
-    margin-top: -35px;
+    top: -9%;
+    width: 20%;
+    align-self: center;
     position: relative;
 }
 
