--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -145,13 +145,13 @@ body {
 .card img {
     width: 100%;
     max-height: 350px;
-    margin-bottom: 10px;
+    margin-bottom: 2px;
     object-fit: cover;
 }
 
 .card video {
     width: 100%;    
-    margin-bottom: 10px;
+    margin-bottom: 2px;
 }
 
 /* FOOTER */
@@ -280,6 +280,8 @@ img {
     max-width: 1000px;
     position: relative;
     margin: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .slideshow-container a:hover {
@@ -330,10 +332,9 @@ img {
   }
 
 .dots {
-    top: 90%;
-    left: 35%;
     width: 20%;
-    align-self: center;
+    padding: 2%;
+    align-self: flex-end;
     position: absolute;
 }
 
