--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -118,14 +118,16 @@ body {
     border-radius: 20px;
     padding: 2%;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .card {
     background-color: gray;
     width: 600px;
-    height: 600px;
+    height: 500px;
     border-radius: 20px;
+    margin: 2%;
     padding: 2% 2%;
     text-align: center;
     display: flex;
@@ -236,7 +238,7 @@ body {
 }
 
 .zoom {
-    min-width: 50%;
+    min-width: 70%;
 }
 
 .close {
@@ -268,8 +270,10 @@ body {
     display: none
 }
 
-img, video {
-    vertical-align: top;
+.mySlides img, .mySlides video {
+    vertical-align: bottom;
+    height: 300px;
+    width: 500px;
     object-fit: cover;
 }
 
@@ -284,10 +288,6 @@ img, video {
 .slideshow-container a:hover {
     text-decoration: none;
 }
-
-/* .mySlides {
-    height: 100px;
-} */
 
 .prev,
 .next {
