--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -54,9 +54,9 @@ body {
     justify-content: center;
 }
 
-#print {    
+#print {
     background-color: #96d88c;
-    border-color: #96d88c;    
+    border-color: #96d88c;
 }
 
 #print:hover {
@@ -73,7 +73,7 @@ body {
 
 #web:hover {
     background-color: #6a9da3;
-    color: #92e0eb;    
+    color: #92e0eb;
     border: solid;
     border-color: #92e0eb;
 }
@@ -85,7 +85,7 @@ body {
 
 #contact:hover {
     background-color: #a06c6c;
-    color: #eea2a2;        
+    color: #eea2a2;
     border: solid;
     border-color: #eea2a2;
 }
@@ -115,6 +115,10 @@ body {
     background-color: #dd9898;
 }
 
+#b-f {
+    background-color: grey;
+}
+
 .back-card {
     background-color: lightgrey;
     border-radius: 20px;
@@ -122,6 +126,33 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+}
+
+.back-f {
+    background-color: lightgrey;
+    color: black;
+    border-radius: 20px;
+    padding: 2%;
+}
+
+.back-f img {
+    height: 40px;
+    width: 40px;
+}
+
+button {
+    background-color: black;
+    color: #FFFFFF;
+    height: 35px;
+    width: 75px;
+    border-radius: 10px;
+    
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #FFFFFF;
+    color: black
 }
 
 .card {
@@ -240,7 +271,7 @@ body {
 }
 
 .zoom {
-    min-width: 50%;
+    min-width: 50%;    
 }
 
 .close {
