--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 900px) {
+    .rond {
+        
+    }
+    .card {
+
+    }
+}
+
 *, *:after, *:before {
     box-sizing: border-box
 }
