--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@media screen and (max-width: 900px){
+    .onglet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .rond {
+        margin-bottom: 3%;
+    }
+    
+}
+
 .container {
     background-color: #5C5C5C;
     font-family: sans-serif;
