--- a/Pages/stylepage.css
+++ b/Pages/stylepage.css
@@ -1,12 +1,3 @@
-@media screen and (max-width: 900px) {
-    .rond {
-        
-    }
-    .card {
-
-    }
-}
-
 *, *:after, *:before {
     box-sizing: border-box
 }
@@ -359,6 +350,24 @@ li {
 @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
+    }
+    .rond {
+        width: 70px;
+        height: 70px;
+        font-size: small;
+    }
+    .card {
+        width: 33vh;
+        height: 32vh;
+        font-size: small;
+    }
+    h2 {
+        font-size: 1em;
+        font-weight: bold;
+    }
+    .mySlides img, .mySlides video {
+        max-height: 12vh;
+        max-width: 100%;
     }
 }
 
